<resources>
    <string name="app_name">Tabbed Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_by">Search by:</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="confirmpassword">confirmPassword</string>
    <string name="create_user">Create User</string>
    <string name="open_button_menu">open button menu</string>
    <string name="share_task">share task</string>
    <string name="delete_task">delete task</string>
    <string name="select_a_date">Select a date</string>
    <string name="select_a_time">Select a time</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="share_title">Share task details with</string>
</resources>