<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="8sp">
    <ImageView
        android:id="@+id/image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@android:drawable/ic_menu_gallery"
        android:layout_gravity="center"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:endIconMode="clear_text">

        <EditText
            android:id="@+id/titleEt"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/title"
            android:fontFamily="casual"
            android:backgroundTint="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:endIconMode="clear_text"
        >

        <EditText
            android:id="@+id/descriptionEt"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/description"
            android:fontFamily="casual"
            android:backgroundTint="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/datePicker"
            style="@style/Widget.AppCompat.Spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="casual"
            android:text="@string/select_a_date"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/timePicker"
            style="@style/Widget.AppCompat.Spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="casual"
            android:text="@string/select_a_time"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>
    </ScrollView>
